# ai_workfinder

./: .coveragerc  .gitignore  AGENTS.md  README.md  TESTING.md  config.json  pyproject.toml  pytest.ini  run-tests.sh
ai/: agents.py  graph_builder.py  main.py  run_from_config.py  state.py
application2/: goal.txt  pyproject.toml  requirements.txt
application2/ai/: agents.py  main.py  run_from_config.py
application2/backend/tools/: apply_http_tool.py  apply_http_wrapper.py  one_click_apply_tool.py  one_click_apply_wrapper.py  parser_crawler.py  parser_crawler_wrapper.py
backend/: requirements-test.txt  requirements.txt  test.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: mongo.py
backend/app/repositories/: uzytkownik_repo.py
backend/app/schemas/: uzytkownik.py
backend/app/services/: __init__.py  ai_runner.py  paths.py  search_state.py
backend/app/tools/: _justjoin_headers_local.py  apply_http_tool.py  apply_http_wrapper.py  one_click_apply_tool.py  one_click_apply_wrapper.py  parser_crawler.py  parser_crawler_wrapper.py
backend/reports/tests/: backend-tests.html  backend-tests.txt  backend-tests.xml
backend/scripts/: generate_backend_test_reports.py
backend/tests/: conftest.py  test_apply_http_tools.py  test_auth_routes.py  test_profile_routes.py  test_repository_and_deps.py  test_search_routes.py  test_security.py
backend/tests/services/: test_search_state.py
backend/tools/: _justjoin_headers_local.py  apply_http_tool.py  apply_http_wrapper.py  apply_tool.py  apply_tool_wrapper.py  captcha_solver.py  justjoin_tool.py  one_click_apply_tool.py  one_click_apply_wrapper.py  overlay_killer.py  parser_crawler_wrapper.py
backend/uploads/69c80d3fda57e86a01055f16/: Pytania ASK.docx
documentation/: AI Workfinder dokumentacja aplikacji.docx  generate_app_documentation.py  generate_app_documentation_docx.py
job-agent-frontend/: .gitignore  index.html  log.txt  package-lock.json  package.json  vite.config.js  vitest.node.config.js
job-agent-frontend/coverage/: applications.js.html  auth.js.html  coverage-summary.json  gmail.js.html  http.js.html  index.html  jobs.js.html
job-agent-frontend/src/: App.jsx  main.jsx
(+71 files in other folders)
