[tool.poetry]
name = "ai_workfinder"
version = "0.1.0"
description = ""
authors = ["MaximPyanin <maximpyanin@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^1.0.3"
langchain-core = "^1.0.5"
typing-extensions = "^4.15.0"
pydantic = "^2.12.4"
langchain-ollama = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
