[tool.poetry]
name = "ai_workfinder"
version = "0.1.0"
description = ""
authors = ["MaximPyanin <maximpyanin@icloud.com>"]

packages = [
    { include = "ai" },
    { include = "backend" },
    { include = "tools" },
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^1.0.3"
langchain-core = "^1.0.5"
typing-extensions = "^4.15.0"
pydantic = "^2.12.4"
langchain-ollama = "^1.0.0"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
lxml = "^5.2.0"
playwright = "^1.56.0"
email-validator = "^2.3.0"
langchain-openai = "^1.1.0"
openai = "^2.9.0"
python-dotenv = "^1.2.1"
2captcha-python = "^2.0.2"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
pymongo = "^4.7.0"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
passlib = "^1.7.4"
celery = "^5.4.0"
redis = "^5.0.0"
google-api-python-client = "^2.140.0"
google-auth = "^2.32.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
